@@ -3,6 +3,8 @@ CHANGES.txt - 09/30/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- Added support for the Apache PassEnv and SetEnv
+	  directives to cupsd.conf (STR #853)
 	- Added large file (64-bit) support (STR #541)
 	- Fixed a performance issue with the ippReadIO()
 	  implementation (STR #1284)
